# efrei-2023-st2-tst-prj

./: README.md  log.md  package-lock.json  package.json  playwright.config.js
Playwright/: tester.py
backend/: .gitignore  README.md  down.sql  false-changelog.txt  pyproject.toml  requirements.txt  tasks.py  up.sql
backend/app/: settings.py  urls.py
backend/hr/: models.py  views.py
backend/hr/migrations/: 0001_initial.py  0001_squashed_0003_alter_employee_team.py  0002_auto_20221203_1537.py  0003_alter_employee_team.py
backend/templates/hr/: add_employee.haml  add_team.haml  add_to_team.haml  address.haml  base.haml  basic_info.haml  contract.haml  delete_employee.haml  delete_team.haml  employee.haml  employees.haml  index.haml  members.haml  promote.haml  reset_db.haml  teams.haml
tests/: page-helper.js
tests/employee/: basic-info.spec.js  create-employee.spec.js  delete-employee.spec.js  edit-employee.spec.js  list-employee.spec.js
tests/employee/helper/: create-employee-helper.js
tests/employee/model/: employee.js
tests/java/: README.md  pom.xml
tests/java/src/test/java/info/dmerej/hr/: AddTeamTest.java
tests/js/: README.md  package.json
tests/js/tests/: add-team.test.js
tests/pages/: base-page.js  create-employee-page.js
tests/python/: README.md  integration_tests.py
tests/team/: create-team.spec.js  delete-team.spec.js  list-team.spec.js
tests/team/helper/: create_team_helper.js
tests/team/model/: team.js
